[gd_scene load_steps=4 format=1]

[ext_resource path="res://scripts/player_bullet.gd" type="Script" id=1]
[ext_resource path="res://art/beams.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 5.83154
height = 42.6393

[node name="player_bullet" type="Area2D"]

transform/pos = Vector2( 511.316, 242.307 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = 1000

[node name="bullet" type="Sprite" parent="."]

texture = ExtResource( 2 )
region = true
region_rect = Rect2( 132.5, 311.376, 58.1785, 90 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="lifetime" type="Timer" parent="."]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = true

[connection signal="area_enter" from="." to="." method="_on_player_bullet_area_enter"]

[connection signal="body_enter" from="." to="." method="_on_player_bullet_body_enter"]

[connection signal="timeout" from="lifetime" to="." method="_on_lifetime_timeout"]


